ctx-demo/03-prometheus/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
        - name: app
          image: prom/prometheus:v2.31.1
          volumeMounts:
            - name: shared
              mountPath: /etc/prometheus/cfg/
          ports:
            - name: http
              containerPort: 9090
          args:
            - "--config.file=/etc/prometheus/cfg/prometheus.yml"
            - "--storage.tsdb.path=/prometheus"
            - "--web.console.libraries=/usr/share/prometheus/console_libraries"
            - "--web.console.templates=/usr/share/prometheus/consoles"
      volumes:
        - name: workspace
          persistentVolumeClaim:
            claimName: workspace-pvc
        - name: shared
          emptyDir:
