ctx-demo/03-prometheus/service.yaml
apiVersion: v1
kind: Service
metadata:
   name: prometheus-svc
spec:
  type: ClusterIP
  selector:
      app: prometheus
  ports:
    - name: http
      port: 9090
      targetPort: 9090
      protocol: TCP
