ctx-demo/03-prometheus/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-ir
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`prometheus.demo-apps.de`)
    kind: Rule
    services:
    - name: prometheus-svc
      port: 9090
